--- a/testimonial_slideshow.css
+++ b/testimonial_slideshow.css
@@ -7,12 +7,13 @@
     padding: 0;
     display: block;
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     font-family: Avenir, Arial, Helvetica, sans-serif;
 }
 
 #testimonial_slider .wrapper {
     width: 100%;
+    height: 200px;
     padding: 40px;
     display: flex;
     justify-content: space-between;
@@ -23,7 +24,6 @@
     width: 100%;
     margin: 0 auto;
     color: rgb(59, 59, 59);
-    
 }
 
 .testimonial_arrow i{
@@ -32,16 +32,21 @@
     color: rgb(236, 236, 236);
 }
 
+.testimonial_arrow i:hover {
+    color: rgb(160, 160, 160);
+}
+
 #testimonial p {
     text-align: center;
-    margin: 0px 20px;
+    margin: 0px 50px;
+    color: white;
 }
 
 #testimonial:before {
     content: '\f10d';
     font-family: FontAwesome;
-    color: rgba(105, 91, 91, 0.37);
-    font-size: 40px;
+    color: rgba(71, 71, 71, 0.37);
+    font-size: 60px;
     margin-left: -20px;
 }
 
@@ -49,14 +54,14 @@
     content: '\f10e';
     font-family: FontAwesome;
     color: rgba(105, 91, 91, 0.37);
-    font-size: 40px;
+    font-size: 60px;
     margin-right: -20px;
     text-align: right;
     float: right;
 }
 
 .testimonial_slide {
-    border-radius: 20px;
+    border-radius: 5px;
 }
 
 button {
@@ -66,9 +71,9 @@ button {
 
 .fade {
     -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
+    -webkit-animation-duration: 1s;
     animation-name: fade;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
   }
   
   @-webkit-keyframes fade {
